--- a/render.yaml
+++ b/render.yaml
@@ -1,16 +1,17 @@
 services:
   - type: web
     name: metabase
+    region: frankfurt
     env: docker
-    repo: https://github.com/render-examples/metabase.git # optional
-    plan: standard # ensure that metabase has at least 2GB of RAM (defaults to starter)
+    plan: standard
     autoDeploy: false
     envVars:
       - key: MB_DB_CONNECTION_URI
         fromDatabase:
-          name: elephant
+          name: metabase:db
           property: connectionString
 databases:
-  - name: elephant
+  - name: metabase:db
+    region: frankfurt
     databaseName: metabasedb
-    ipAllowList: [] # only allow internal connections
+    ipAllowList: []
